2011-03-23  Moritz Bunkus  <moritz@bunkus.org>

	* mkvpropedit, mmg header/chapter editor: bug fix: Fixed parsing
	Matroska files if mkvtoolnix is compiled with newer versions of
	libebml/libmatroska (SVN revisions after the releases of libebml
	1.2.0/libmatroska 1.1.0).

2011-03-14  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: WAV files with unsupported format tags are
	rejected instead of being treated like containing PCM. Fix for bug
	610.

2011-03-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: The EBML header values "doc type version"
	and "doc type read version" are both set to 3 if at least one of
	the video tracks uses the stereo mode parameter.

2011-03-09  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.6.0.

2011-03-08  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Fixed building the Qt version of mkvinfo's
	GUI (again). Fix for bug 576.

2011-02-17  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: If the header editor finds 'language' elements
	with ISO-639-1 codes (e.g. "fra" instead of "fre" for "French")
	then it will map the code to the corresponding ISO-639-2 code. Fix
	for bug 598.

	* mmg: bug fix: Fixed one of the issues causing mmg to report that
	it is configured to use an unsupported version of mkvmerge when
	the reported version was actually empty.

	* mkvmerge: enhancement: HD-DVD subtitles are recognized as being
	an unsupported file format. This makes the error message presented
	to the user a bit clearer. Fix for bug 600.

2011-02-15  Moritz Bunkus  <moritz@bunkus.org>

	* build: Boost 1.36.0 or newer is required (up from 1.34.0). Also
	fixed building with v3 of Boost's filesystem library, e.g. with
	Boost 1.46.0 Beta 1 or newer.

	* mkvpropedit: new feature: Added support for adding, replacing
	and removing tags.

2011-02-07  Moritz Bunkus  <moritz@bunkus.org>

	* all: Added a translation for the programs into Turkish by
	ßouЯock (see AUTHORS).

2011-02-06  Moritz Bunkus  <moritz@bunkus.org>
