@@ -21,5 +21,6 @@ options_c::options_c()
   , m_show_size(false)
   , m_show_track_info(false)
   , m_hexdump_max_size(16)
+  , m_verbose(0)
 {
 }
