@@ -1,5 +1,8 @@
 2011-03-23  Moritz Bunkus  <moritz@bunkus.org>
 
+	* mkvinfo: bug fix: Fixed redirecting the output into a file with
+	"--redirect-output"/"-r" and verbosity levels of 2 and higher.
+
 	* mkvpropedit, mmg header/chapter editor: bug fix: Fixed parsing
 	Matroska files if mkvtoolnix is compiled with newer versions of
 	libebml/libmatroska (SVN revisions after the releases of libebml
